Some renderer code

--- a/client/src/app/components/app.component.html
+++ b/client/src/app/components/app.component.html
@@ -3,5 +3,5 @@
     Generic RPG
   </div>
 
-  <canvas id='game-canvas' width="720" height="512"></canvas>
+  <canvas #gameCanvas width="720" height="512"></canvas>
 </div>
