added rendering functionality and basis for physics

--- a/client/src/app/components/app.component.html
+++ b/client/src/app/components/app.component.html
@@ -3,5 +3,5 @@
     Generic RPG
   </div>
 
-  <canvas #gameCanvas width="720" height="512"></canvas>
+  <app-game-canvas></app-game-canvas>
 </div>
