Basics of phaser implemented

--- a/client/src/app/components/app.component.scss
+++ b/client/src/app/components/app.component.scss
@@ -14,7 +14,7 @@
     font-size: 10vmin;
     height: 10vmin;
 
-    margin-top: 2vmin;
+    margin: 2vmin 0;
 
     display: flex;
     align-items: center;
