--- a/client/src/app/components/game-canvas/game-canvas.component.html
+++ b/client/src/app/components/game-canvas/game-canvas.component.html
@@ -1,3 +1,3 @@
-<div class='root'>
-  <canvas tabindex="1" #gameCanvas width="720" height="512" (click)="onKeyDown($event)" (keydown)="onKeyDown($event)" (keyup)="onKeyUp($event)"></canvas>
+<div id='gameContainer'>
+
 </div>
