--- a/client/src/app/components/game-canvas/game-canvas.component.html
+++ b/client/src/app/components/game-canvas/game-canvas.component.html
@@ -1,3 +1,7 @@
-<div id='gameContainer'>
+<div class='root'>
+  <div id='gameContainer'></div>
 
+  <button mat-raised-button (click)="onExportLevel()">Export level</button>
+  <button mat-raised-button (click)="onImportLevel()">Import level</button>
 </div>
+
