--- a/client/src/app/components/app.component.html
+++ b/client/src/app/components/app.component.html
@@ -3,5 +3,7 @@
     Generic RPG
   </div>
 
-  <router-outlet></router-outlet>
+  <div class='router'>
+    <router-outlet></router-outlet>
+  </div>
 </div>
