--- a/client/src/assets/styles/theme-colors.scss
+++ b/client/src/assets/styles/theme-colors.scss
@@ -1,2 +1,13 @@
-$mainBgColor: #313131;
+$mainBgColor: #451607;
+$borderColor: #753100;
+$windowBgColor: #775c3b;
+$inputBgColor: #9E815C;
+$textColor: #4B2000;
 $gold: #ffd000;
+
+
+
+$buttonBg: #753100;
+$buttonBgHover: #8b3b02;
+$buttonBgHold: #582500;
+$buttonBgDisabled: #503e31
