bots can use weapons now (almost)

--- a/client/src/app/components/game-canvas/game-canvas.component.scss
+++ b/client/src/app/components/game-canvas/game-canvas.component.scss
@@ -95,6 +95,7 @@
 
         .item-list {
           width: 236px;
+          min-width: 236px;
           margin-right: 4px;
           background-color: #46321A;
 
